Responsive and dark mode fix

--- a/src/components/CardGenerator/CardGenerator.css
+++ b/src/components/CardGenerator/CardGenerator.css
@@ -130,4 +130,5 @@
 
 .gen-cards-space{
     margin-left: 4rem;
+    transition: 0.2s;
 }
